Fix navbar color on mobile

--- a/_sass/_navbar.scss
+++ b/_sass/_navbar.scss
@@ -39,6 +39,10 @@
             background-color: $green;
         }
 
+        &:hover {
+            background-color: $green;
+        }
+
         .icon-bar {
             background-color: $pink;
         }
